[UPD]Add-rule-html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <head>
         <meta charset="utf-8" />
         <title>Boolean Academy</title>
+        <!--pet usare media-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--eserczio 
+        Tablet (≤768px): Quando la larghezza dello schermo è al massimo 768px, cambia lo stile per rendere il layout più adatto ai tablet.
+        Mobile (≤480px): Quando la larghezza è al massimo 480px, il layout deve essere ancora più compatto.
+        Desktop flessibile (>768px e ≤1160px): C’è un problema di rigidità nel layout in questa fascia. Devi aggiungere una media query per evitare la scrollbar orizzontale e rendere il sito più fluido.-->
+
         <!-- Fonts -->
         <link
             href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap"
